--- a/po/wesnoth-ei/sk.po
+++ b/po/wesnoth-ei/sk.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
 "PO-Revision-Date: 2015-11-07 11:09+0100\n"
 "Last-Translator: Svistwarrior273 <romanbeno273@gmail.com>\n"
