--- a/po/wesnoth-sotbe/sk.po
+++ b/po/wesnoth-sotbe/sk.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.2-CVS\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
 "PO-Revision-Date: 2014-02-24 21:03+0100\n"
 "Last-Translator: Svistwarrior273 <romanbeno273@gmail.com>\n"
