--- a/po/wesnoth-thot/sk.po
+++ b/po/wesnoth-thot/sk.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.12+dev\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2018-04-29 10:03+0200\n"
 "Last-Translator: Filip Hiadlovský <f.hiadlovsky@gmail.com>\n"
