--- a/po/wesnoth-trow/sk.po
+++ b/po/wesnoth-trow/sk.po
@@ -6,9 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
-"PO-Revision-Date: 2018-06-10 10:16+0200\n"
+"PO-Revision-Date: 2019-01-23 23:12+0100\n"
 "Last-Translator: PaulP <paulp@hotmail.sk>\n"
 "Language-Team: none <viliam@bur.sk>\n"
 "Language: sk_SK\n"
@@ -48,7 +48,7 @@ msgstr "Veliteľ"
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:21
 msgid "Normal"
-msgstr "Stredn8"
+msgstr "Stredná"
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:22
@@ -75,8 +75,10 @@ msgstr ""
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:26
+#, fuzzy
+#| msgid "(Hard level, 24 scenarios.)"
 msgid "(Expert level, 24 scenarios.)"
-msgstr "(Pre expertov, 24 scén)"
+msgstr "(Pre expertov, 24 scén.)"
 
 #. [about]
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:29
@@ -1681,8 +1683,10 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:240
+#, fuzzy
+#| msgid "We will help."
 msgid "We will help. "
-msgstr "Pomôžeme. "
+msgstr "Pomôžeme."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:240
@@ -3129,7 +3133,7 @@ msgstr ""
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/10_Sewer_of_Southbay.cfg:164
 msgid "This is the far end of that river bed. Legend has it—"
-msgstr "Toto je vzdialenejší konec toho riečiska. Legenda hovorí..."
+msgstr "Toto je vzdialenejší koniec toho riečiska. Legenda hovorí..."
 
 #. [message]: speaker=Tinry the Red
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/10_Sewer_of_Southbay.cfg:168
@@ -7211,6 +7215,9 @@ msgid ""
 msgstr ""
 "To sú naozaj skvelé správy. Náš počet sa zdvojnásobil. Teraz poďme riešiť "
 "problémy poruke."
+
+#~ msgid "Yetis"
+#~ msgstr "Yetiovia"
 
 #~ msgid "bite"
 #~ msgstr "hrýzť"
