--- a/po/wesnoth-tsg/sk.po
+++ b/po/wesnoth-tsg/sk.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2018-04-17 23:54+0200\n"
 "Last-Translator: Martin Plavala <martinplavala@gmail.com>\n"
@@ -1423,7 +1423,10 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:358
-msgid "I shall not join these accursed undead! Bury me deeply, my friends..."
+#, fuzzy
+#| msgid ""
+#| "I shall not join these accursed undead! Bury me deeply, my friends..."
+msgid "I shall not join these accursed undead! Bury me deeply my friends..."
 msgstr ""
 "Nemám v úmysle sa pripojiť k tým prekliatym nemŕtvym! Pochovajte ma tak "
 "hlboko, ako len môžete, priatelia..."
