--- a/po/wesnoth-anl/sk.po
+++ b/po/wesnoth-anl/sk.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
 "PO-Revision-Date: 2018-04-17 23:44+0200\n"
 "Last-Translator: Martin Plavala <martin@komplet.sk>\n"
