--- a/po/wesnoth-did/sk.po
+++ b/po/wesnoth-did/sk.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:39 UTC\n"
 "PO-Revision-Date: 2017-04-15 22:21+0200\n"
 "Last-Translator: Stanislav Hoferek <shoferek@gmail.com>\n"
