--- a/po/wesnoth-l/sk.po
+++ b/po/wesnoth-l/sk.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
-"PO-Revision-Date: 2018-06-16 13:42+0200\n"
+"PO-Revision-Date: 2019-01-23 23:48+0100\n"
 "Last-Translator: Stanislav Hoferek <shoferek@gmail.com>\n"
 "Language-Team: none <>\n"
 "Language: sk_SK\n"
@@ -62,13 +62,15 @@ msgstr ""
 "S narastajúcim tieňom občianskej vojny nad Wesnothom sa do do odboja proti "
 "tyranii kráľovnej Aševiery púšťa skupina húževnatých pohraničiarov. V ceste "
 "za vytúženou slobodou im však nebudú stáť len ostré čepele kráľovského "
-"vojska, ale aj temnejšie hrozby - Orkovia a Nemŕtvi.\n"
+"vojska, ale aj temnejšie hrozby — Orkovia a Nemŕtvi.\n"
 "\n"
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:28
+#, fuzzy
+#| msgid "(Novice level, 8 scenarios.)"
 msgid "(Intermediate level, 8 scenarios.)"
-msgstr "(Stredná úroveň, 8 scén.)"
+msgstr "(Ľahká úroveň, 8 scén.)"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:31
@@ -238,7 +240,7 @@ msgid ""
 "slake the thirst of our blades."
 msgstr ""
 "Už sa teším na vypálenie ľudských miest, ale pokiaľ nám naši veľký vodcovia "
-"neposkytnú dostatok jednotiek, musia nám stačiť títo dedinčania - nasýtia "
+"neposkytnú dostatok jednotiek, musia nám stačiť títo dedinčania — nasýtia "
 "našich vlkov a utíšia smäd našich čepelí."
 
 #. [message]: speaker=Fal Khag
@@ -328,7 +330,7 @@ msgid ""
 "Do it. Try to hold them back until us old-timers can get there and finish "
 "them off."
 msgstr ""
-"Učiňte tak. Snažte sa ich zdržať, kým sa ta dostaneme my - veteráni - a "
+"Učiňte tak. Snažte sa ich zdržať, kým sa ta dostaneme my — veteráni — a "
 "dorazíme ich."
 
 #. [message]: speaker=Baldras
@@ -432,7 +434,7 @@ msgstr "Gobliní jazdci sú na love. Nesmieme pustiť žiadneho z nich do dediny
 #. [message]: speaker=Wolmas
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:380
 msgid "Look! Goblin riders are on the hunt — and heading right for Dallben!"
-msgstr "Pozrite! Gobliní jazdci sú na love - a smerujú priamo do Dallbenu!"
+msgstr "Pozrite! Gobliní jazdci sú na love — a smerujú priamo do Dallbenu!"
 
 #. [message]: speaker=Remald
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:384
@@ -541,6 +543,12 @@ msgstr "Kráľom Wesnothu je Garad. Nám nevládne žiadna kráľovná."
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:145
+#, fuzzy
+#| msgid ""
+#| "Insolent peasants, you will kneel before your betters! Asheviere is the "
+#| "Queen of Wesnoth. The King fell three weeks ago at Abez. I shall not "
+#| "bandy words with you. Your magistrate will be coming with us, and we do "
+#| "not care if it is dead or alive."
 msgid ""
 "Insolent peasants, you will kneel before your betters! Asheviere is the "
 "queen of Wesnoth. The King fell three weeks ago at Abez. I shall not bandy "
@@ -632,6 +640,10 @@ msgstr "Ach nie! Náš čas vypršal, ich posily dorazili..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:350
+#, fuzzy
+#| msgid ""
+#| "They would be remembered only as traitors rightly put down by the Queen’s "
+#| "lances. And in the dark years to come, woe betide any who questioned it."
 msgid ""
 "They would be remembered only traitors rightly put down by the Queen’s "
 "lances. And in the dark years to come, woe betide any who questioned it."
@@ -696,12 +708,16 @@ msgstr ""
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:173
+#, fuzzy
+#| msgid ""
+#| "It has been a long time, old friend. Your news worries us. Yet, there is "
+#| "no problem we have not worked out together."
 msgid ""
 "It has been a long time, old friend. Your news worries us. Yet, there is no "
 "problem we have not worked out here at our secret meeting place."
 msgstr ""
-"Dávno sme sa nevideli, starý priateľu. Tvoje správy nás znepokojujú. Nie je "
-"však taký problém, ktorý by sme neboli vyriešili tu na našom tajnom mieste."
+"Dávno sme sa nevideli, starý priateľu. Tvoje správy nás znepokojujú. Nebol "
+"však taký problém, ktorý by sme neboli vyriešili."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:177
@@ -710,7 +726,7 @@ msgid ""
 "leader was no man I had ever seen in Annuvin province before. Never has one "
 "been sent out here as a patrol captain who was so ruthless and cruel."
 msgstr ""
-"Nerozumieš. Zaútočili sme na vojenskú hliadku Wesnothu. A nielen to - ich "
+"Nerozumieš. Zaútočili sme na vojenskú hliadku Wesnothu. A nielen to — ich "
 "vodca bol muž, ktorého som nikdy predtým v našej provincii nevidel. Ešte "
 "nikdy sem neposlali takého bezohľadného a krutého kapitána."
 
@@ -773,6 +789,10 @@ msgstr ""
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:205
+#, fuzzy
+#| msgid ""
+#| "I think they are, old friend. And that rank smell on the wind tells "
+#| "another tale: saurians approach. To arms!"
 msgid ""
 "I think they are, old friend. And that rank smell on the wind tells another "
 "tale; saurians approach. To arms!"
@@ -818,7 +838,7 @@ msgid ""
 "Can the darkest rumors be true, then? Does the Kingdom— Does Queen "
 "Asheviere... send orcs against her own people?"
 msgstr ""
-"Že by potom boli najtemnejšie chýry pravdivé? Posiela kráľovstvo—- kráľovná "
+"Že by potom boli najtemnejšie chýry pravdivé? Posiela kráľovstvo — kráľovná "
 "Aševiéra... orkov proti vlastnému ľudu?"
 
 #. [message]: speaker=Relana
@@ -834,10 +854,15 @@ msgstr ""
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:265
+#, fuzzy
+#| msgid ""
+#| "We have tarried here for far too long... There is no way we can reach "
+#| "Elensefar and return with help before the Wesnoth army destroys our "
+#| "homes. Retreat!"
 msgid ""
 "We have tarried here for far too long... There is no way we can reach "
 "Elensefar and return with help before the Wesnoth army destroys our homes. "
-"Retreat!"
+"Retreat!!"
 msgstr ""
 "Zdržali sme sa tu pridlho... Nemáme šancu otočiť to do Elensefaru a vrátiť "
 "sa s pomocou skôr, než armáda Wesnothu zničí naše domovy. Ústup!!"
@@ -1067,7 +1092,7 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:646
 msgid "I don’t understand. There are no other noble lords in this area."
 msgstr ""
-"Nerozumiem. V týchto končinách predsa okrem Vás predsa nie sú žiadni ďalší "
+"Nerozumiem. V týchto končinách predsa okrem Vás nie sú žiadni ďalší "
 "šľachtici."
 
 #. [message]: speaker=Lord Maddock
@@ -1105,7 +1130,7 @@ msgid ""
 "of death — would only grow greater with time."
 msgstr ""
 "Skutočne, Aševiérine armády sa zhromaždili a udreli ešte predtým, ako mohla "
-"byť rodiaca sa vzbura čo i len naplánovaná. Vzbúrenci u nej milosť nenašli - "
+"byť rodiaca sa vzbura čo i len naplánovaná. Vzbúrenci u nej milosť nenašli — "
 "a to bol len jeden z mnohých prípadov, kedy sa tak stalo."
 
 #. [scenario]: id=05_Hide_and_Seek
@@ -1216,7 +1241,7 @@ msgid ""
 "Looks like these guards hold stationary posts, so if we’re careful enough we "
 "should be able to slip our way around them unnoticed."
 msgstr ""
-"Zdá sa, že stráže držia svoje pozície - ak budeme dosť opatrný, možno sa nám "
+"Zdá sa, že stráže držia svoje pozície — ak budeme dosť opatrní, možno sa nám "
 "podarí nepozorovane pomedzi nich prekĺznuť."
 
 #. [message]: speaker=Baldras
@@ -1410,15 +1435,20 @@ msgstr ""
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:247
+#, fuzzy
+#| msgid ""
+#| "Carcyn is always foggy as of late because these woods have recently "
+#| "become home to a lich and two of its underling necromancers. Our "
+#| "experiments may have actually aroused it from sleep... We’re not sure."
 msgid ""
 "Carcyn is always foggy as of late because these woods have recently become "
 "home to a lich and two of its underling necromancers. Our experiments may "
 "have actually aroused it from sleep... We’re not exactly sure."
 msgstr ""
 "Carcyn je v poslednom čase stále prikrytý hmlou. Je to tak odvtedy, čo sa "
-"tieto lesy stali domovom kosteja a jeho dvoch nohsledov - černokňažníkov. Je "
+"tieto lesy stali domovom kosteja a jeho dvoch nohsledov — černokňažníkov. Je "
 "možné, že sme ho prebudili zo spánku našimi experimentmi... Nie sme si tým "
-"celkom istý."
+"istí."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:251
@@ -1607,7 +1637,7 @@ msgid ""
 "help.\n"
 "<b>Note:</b> Baldras is now able to recruit Outlaws."
 msgstr ""
-"Vedomí si toho, že i oni tak budú považovaný za zločincov, neochotne "
+"Vedomý si toho, že i oni tak budú považovaní za zločincov, neochotne "
 "prijímal ich pomoc. \n"
 "<b>Poznámka:</b>Baldras odteraz môže verbovať Štvancov."
 
@@ -1679,7 +1709,7 @@ msgid ""
 "are a fortress. They used to protect this area from the enemies of Wesnoth; "
 "I never imagined they would house its enemies."
 msgstr ""
-"Opevnenie. Veže Halsteadu sú viac než len opevnenie, synovče - je to riadna "
+"Opevnenie. Veže Halsteadu sú viac než len opevnenie, synovče — je to riadna "
 "pevnosť. Slúžila na ochranu tejto oblasti pred nepriateľmi Wesnothu. Nikdy "
 "by mi nenapadlo, že práve nepriateľov Wesnothu z nej musíme vyhnať."
 
@@ -1739,7 +1769,7 @@ msgid ""
 msgstr ""
 "Už mi je jasné, kam smerujú všetky tie jednotky. Musíme zabrániť tomu, aby "
 "táto armáda posilnila posádku. Nemôžeme ich zničiť naraz, ale kúsok po "
-"kúsku. Ani na chvíľu ich nenecháme na pokoji - každý krok vpred si budú "
+"kúsku. Ani na chvíľu ich nenecháme na pokoji — každý krok vpred si budú "
 "musieť tvrdo vybojovať. A keď aj dorazia do Halseadu, musia byť na hranici "
 "síl či smrti."
 
@@ -1824,7 +1854,7 @@ msgstr ""
 "Sme v riadnej kaši. Nedá sa nič robiť, našim ďalším cieľom musí byť "
 "Halstead. Ak budeme čakať, stanú sa nezničiteľnými. Ale pokiaľ sa nám ho "
 "podarí vypáliť ešte predtým, naši ľudia budú mať šancu. Dnes si dobre "
-"oddýchnite - v zajtrajšej bitke sa totiž rozhodne o osude našich domovov, "
+"oddýchnite — v zajtrajšej bitke sa totiž rozhodne o osude našich domovov, "
 "rodín a slobody."
 
 #. [message]: speaker=Baldras
@@ -1869,7 +1899,7 @@ msgid ""
 "as well as in name."
 msgstr ""
 "Veľká armáda Wesnothu, ktorej velila Veľká rada arcimágov, prečistila zem od "
-"každej živej duše, ktorá sa nechcela podriadiť - či už to bola nejaká zver, "
+"každej živej duše, ktorá sa nechcela podriadiť — či už to bola nejaká zver, "
 "ork alebo elf. Mestský štát Elensefar bol oficiálne prehlásený za súčasť "
 "Wesnothu. Vtedy konečne vznikol Wesnoth v podobe, v akej ho poznáme dnes."
 
@@ -1883,7 +1913,7 @@ msgid ""
 msgstr ""
 "Pamätník tohoto víťazstva bol vystavaný v srdci divočiny. Pri príležitosti "
 "tradičného dvanásťročného rituálu ukázala Veľká rada arcimágov, čoho až je "
-"ľudská mágia schopná - nový pamätník vytvorili priamo na mieste, zo živej "
+"ľudská mágia schopná — nový pamätník vytvorili priamo na mieste, zo živej "
 "skaly pod nimi."
 
 #. [part]
@@ -1901,6 +1931,13 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:35
+#, fuzzy
+#| msgid ""
+#| "This sentinel of the western plains stood watch as Wesnoth prospered for "
+#| "many centuries under its protection. No war has overcome it, and its "
+#| "walls have never been overrun. The blood of invaders stains its parapets "
+#| "and the bones of the defeated crumble at the base of Halstead’s frozen "
+#| "waves of stone."
 msgid ""
 "This sentinel of the western plains stood watch as Wesnoth prospered for "
 "many centuries under the protection it provided. No war has overcome it, and "
@@ -1909,7 +1946,7 @@ msgid ""
 "of stone."
 msgstr ""
 "Tento obranca západných plání poskytoval Wesnothu ochranu, vďaka ktorej "
-"krajina dlhé stáročia prosperovala. Nikdy ho nepokorila žiadna vojna, a jeho "
+"krajina dlhé stáročia prosperovala. Nikdy ho nepokorila žiadna vojna a jeho "
 "múry neboli nikdy prelomené. Krv útočníkov pokrýva jeho hradby a kosti "
 "porazených sa rozpadajú pri základoch zamrznutých Halsteadských vĺn z kameňa."
 
@@ -2030,13 +2067,18 @@ msgstr "Ako vieš?"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:503
+#, fuzzy
+#| msgid ""
+#| "When I was a boy, my father — your grandfather — brought your mother and "
+#| "me to live in Aldril after orcs massacred many in our village. We grew up "
+#| "around here, and we learned many things."
 msgid ""
 "When I was a boy, my father — your grandfather — brought your dad and me to "
 "live in Aldril after orcs massacred many in our village. We grew up around "
 "here, and we learned many things."
 msgstr ""
-"Keď som bol ešte chlapec, môj otec - tvoj starý otec - priviedol mňa a "
-"tvojho otca do mesta Aldril po tom, čo orkovia vyplienili našu dedinu. Tu "
+"Keď som bol ešte chlapec, môj otec — tvoj starý otec — priviedol mňa a "
+"tvojho otca do mesta Aldril po tom, čo orkovia zmasakrovali našu dedinu. Tu "
 "sme vyrástli a veľa sme sa pri tom naučili."
 
 #. [message]: speaker=Baldras
@@ -2156,7 +2198,7 @@ msgstr "Prerazili bránu pevnosti! Odrazte ich!"
 #. [message]: speaker=unit
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:746
 msgid "I’m inside the tower! I’m going down to the catacombs — cover me."
-msgstr "Som vo veži! Idem dolu do katakomb - kryte ma."
+msgstr "Som vo veži! Idem dolu do katakomb — kryte ma."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:756
@@ -2319,7 +2361,7 @@ msgstr ""
 #. [scenario]: id=09_Epilogue
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:4
 msgid "Liberty — Epilogue"
-msgstr "Sloboda - Epilóg"
+msgstr "Sloboda — Epilóg"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:14
@@ -2343,6 +2385,12 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:20
+#, fuzzy
+#| msgid ""
+#| "The Elense riders routed the orcish army, small as it was, and sent them "
+#| "back across the Great River. They then scattered to the countryside and "
+#| "were not heard from again. Baldras thought this behavior odd when he "
+#| "heard about it."
 msgid ""
 "The Elense riders routed the orcish army, small as it was, and sent them "
 "back across the Great River. They then scattered to the countryside and were "
@@ -2364,8 +2412,8 @@ msgid ""
 msgstr ""
 "Hlavná časť Aševiérinej armády zatiaľ napredovala k vtedy už len troskám "
 "Halsteadu. Začali sa však diať čudné veci. Každú noc zmizlo bez stopy "
-"niekoľko mužov. Ďaľších našli rozsekaných na kusy. Počas pochodu nemali "
-"vojaci ani chvíľu pokoja - každú chvíľu sa niekto zrútil na zem, mŕtvy, "
+"niekoľko mužov. Ďalších našli rozsekaných na kusy. Počas pochodu nemali "
+"vojaci ani chvíľu pokoja — každú chvíľu sa niekto zrútil na zem, mŕtvy, "
 "zasiahnutý neviditeľným útočníkom. Radami vojska sa začali šíriť správy o "
 "prítomnosti nemŕtvych."
 
@@ -2484,6 +2532,14 @@ msgstr "Túlavý mág"
 
 #. [unit_type]: id=Rogue Mage, race=human
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:17
+#, fuzzy
+#| msgid ""
+#| "Some mages are thrown out of the mages’ guild for attempting to practice "
+#| "forbidden arts. Now completely outside the law, these rogue mages do "
+#| "whatever is necessary to support their study of black magic. Although not "
+#| "as skilled as mages with more formal training, their magic can be quite "
+#| "lethal, while their banditry has resulted in moderate skill with the "
+#| "short sword."
 msgid ""
 "Some mages are thrown out of the mage’s guild for attempting to practice "
 "forbidden arts. Now completely outside the law, these rogue mages do "
@@ -2493,10 +2549,10 @@ msgid ""
 msgstr ""
 "Sú takí, ktorí sú vylúčení z uznávaného spoločenstva mágov kvôli pokusom o "
 "praktizovanie zakázanej časti mágie. Teraz, postavení úplne mimo zákon, sú "
-"títo lotri sú schopní čohokoľvek, čo im umožní hlbšie preniknúť do "
-"tajomstiev čiernej mágie. Aj keď nie sú tak zdatní ako mágovia, ktorí prešli "
-"bežným štúdiom, ich kúzla sú rozhodne smrtonosné, a ako banditi navyše dobre "
-"ovládajú aj boj s mečom."
+"títo lotri schopní čohokoľvek, čo im umožní hlbšie preniknúť do tajomstiev "
+"čiernej mágie. Aj keď nie sú tak zdatní ako mágovia, ktorí prešli bežným "
+"štúdiom, ich kúzla sú rozhodne smrtonosné, a ako banditi navyše dobre "
+"ovládajú aj boj s krátkym mečom."
 
 #. [attack]: type=cold
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:33
@@ -2769,6 +2825,23 @@ msgstr ""
 "Vrátili sa do dediny, ktorú však našli úplne zničenú. Bojovníci ležali mŕtvi "
 "na zemi, a tých niekoľko, čo prežilo, čakal neznámy osud. Bola to pohroma, "
 "ale ako sa ešte zvieralo Aševierino zovretie, mali zažiť ešte horšie veci."
+
+#~ msgid ""
+#~ "Fearing that the Queen’s army would return in force in the wake of its "
+#~ "fallen patrol, Baldras and his men fled Dallben. They tracked to Delwyn "
+#~ "and sent ahead for the magistrate, Relana, to meet them in a secluded "
+#~ "strath in the swamps."
+#~ msgstr ""
+#~ "Baldras a jeho muži utiekli z Dallbenu, pretože sa obávali, že sa "
+#~ "kráľovnina armáda vráti s posilami kvôli porazenej hliadke. Pochodovali "
+#~ "do Delwynu a vopred poslali správu predstavenej, Relane, aby sa s nimi "
+#~ "stretla v odľahlom údolí v bažinách."
+
+#~ msgid ""
+#~ "As morning dawned over the day after next, they found Relana already "
+#~ "waiting for them."
+#~ msgstr ""
+#~ "Keď sa rozvidnelo na nasledujúci deň, našli Relanu, ktorá ich už čakala."
 
 #~ msgid "axe"
 #~ msgstr "sekera"
