--- a/po/wesnoth-low/sk.po
+++ b/po/wesnoth-low/sk.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
-"PO-Revision-Date: 2018-04-23 01:16+0200\n"
+"PO-Revision-Date: 2019-01-23 22:47+0100\n"
 "Last-Translator: Filip Hiadlovský <f.hiadlovsky@gmail.com>\n"
 "Language-Team: none\n"
 "Language: sk_SK\n"
@@ -38,8 +38,10 @@ msgstr ""
 
 #. [campaign]: id=LOW, type=hybrid
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:53
+#, fuzzy
+#| msgid "(Hard level, 18 scenarios.)"
 msgid "(Intermediate level, 18 scenarios.)"
-msgstr "(Stredná úroveň, 18 scén.)"
+msgstr "(Ťažká úroveň, 18 scén.)"
 
 #. [campaign]: id=LOW, type=hybrid
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:55
