--- a/po/wesnoth-nr/sk.po
+++ b/po/wesnoth-nr/sk.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-06-16 13:31+0200\n"
+"PO-Revision-Date: 2019-01-23 22:55+0100\n"
 "Last-Translator: PaulP <paulp@hotmail.sk>\n"
 "Language-Team: none <>\n"
 "Language: sk_SK\n"
@@ -889,7 +889,7 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg:312
 msgid "... Uh, sure!"
-msgstr ".. aha... no keď to vravíš..."
+msgstr "... aha... no keď to vravíš..."
 
 #. [message]: speaker=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg:317
@@ -2807,7 +2807,7 @@ msgid ""
 "Interesting. I wonder who — or what — could have created such a powerful "
 "artifact. There must be one heck of a story behind this thing."
 msgstr ""
-"Zaujímavé. Zaujímalo by ma kto - alebo čo - mohlo vytvoriť taký mocný "
+"Zaujímavé. Zaujímalo by ma kto — alebo čo — mohlo vytvoriť taký mocný "
 "artefakt. Určite sa k nemu viaže nejaký drsný príbeh!"
 
 #. [object]: id=justice_rod
@@ -3191,15 +3191,21 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2057
+#, fuzzy
+#| msgid ""
+#| "I am afraid times have changed much. Our first king, Haldric I, fled the "
+#| "Green Isle with the Wesfolk, the orcs in pursuit. He came ashore on this "
+#| "land that we now call the Great Continent and destroyed the Lich-Lord "
+#| "Jevyan before founding the Kingdom of Wesnoth. That was centuries ago."
 msgid ""
 "I am afraid times have changed much. Our first king, Haldric I, fled from "
 "the Green Isle with the Wesfolk and the orcs in pursuit. He came ashore on "
 "this land that we now call the Great Continent and destroyed the Lich-Lord "
 "Jevyan before founding the Kingdom of Wesnoth. That was centuries ago."
 msgstr ""
-"Obávam sa, že časy sa zmenili. Náš prvý kráľ Haldrik I utiekol zo Zeleného "
+"Obávam sa, že časy sa zmenili. Náš prvý kráľ Haldrik I. utiekol zo Zeleného "
 "ostrova a prenasledoval orkov. Priplavil sa na pobrežie tejto zeme a nazval "
-"ho Veľký kontinent. Porazil Pána kostejov Jevyana predtým, ako založil "
+"ho Veľký kontinent. Porazil Pána kostejov Jevyana predtým než založil "
 "kráľovstvo Wesnoth. Bolo to však pred storočiami."
 
 #. [message]: speaker=Abhai
@@ -4818,8 +4824,10 @@ msgstr "Ro’Sothian"
 
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:323
+#, fuzzy
+#| msgid "Save Stalrag from Ro’Sothian"
 msgid "Save Stalrag from Ro’Sothian."
-msgstr "Zachrániš Stalraga pred Ro'Sothianom"
+msgstr "Zachráň Stalraga pred Ro'Sothianom"
 
 #. [objective]: condition=lose
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:327
@@ -4829,8 +4837,10 @@ msgstr "Zomrie Tallin"
 #. [objective]: condition=lose
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:331
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:701
+#, fuzzy
+#| msgid "Death of Stalrag"
 msgid "Death of Stalrag."
-msgstr "Zomrie Stalrag"
+msgstr "Smrť Stalraga"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:350
@@ -5138,8 +5148,10 @@ msgstr "Späť do žalára, kamarát."
 
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:693
+#, fuzzy
+#| msgid "Capture Ro’Arthian"
 msgid "Capture Ro’Arthian."
-msgstr "Zajmeš Ro'Arthiana."
+msgstr "Zajmi Ro'Arthiana"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:735
@@ -5231,7 +5243,7 @@ msgstr ""
 "Uvažuj nad tým, Ro'Arthian, je to férový obchod. Ak nepristúpiš na Tallinov "
 "návrh, vojna medzi tebou a Stalragom sa nikdy neskončí. Tieto končiny už "
 "strašíš príliš dlho. Je najvyšší čas, aby si ty a tvoj brat spočinuli v "
-"pokoji"
+"pokoji."
 
 #. [message]: speaker=Ro'Arthian
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:790
@@ -8603,7 +8615,7 @@ msgid ""
 msgstr ""
 "Orkovia sú ťažkopádne stvorenia; nebolo preto ťažké ísť po Rakšašových "
 "stopách. Všade za ním ale vládlo hrozivé ticho, prerušované len škrekotom "
-"havranov"
+"havranov."
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:26
@@ -9903,13 +9915,19 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:411
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:432
+#, fuzzy
+#| msgid ""
+#| "On Father Morvin’s advice, the Council approached all the different "
+#| "orcish tribes and made treaties with them. If a chieftain refused to "
+#| "cooperate with the Alliance, he was forcibly removed from his post and a "
+#| "more favorably-disposed leader put in his place."
 msgid ""
 "On Father Morvin’s advice, the Council approached all the different orcish "
 "tribes and made treaties with them. If a chieftain refused to cooperate with "
 "the Alliance, he was forcibly removed from his post and another more "
 "favorably disposed put in his place."
 msgstr ""
-"Na radu Otca Morvina Rada vyslala svojich zástupcov ku všetkým orkským "
+"Na radu Otca Morvina vyslala Rada svojich zástupcov ku všetkým orkským "
 "kmeňom a uzavrela s nimi dohody. Ak náčelník odmietol spoluprácu s "
 "Alianciou, bol odstránený zo svojho postu a na jeho miesto dosadený iný, "
 "ktorý bol spolupráci naklonený."
@@ -10453,6 +10471,9 @@ msgstr "Arthian"
 #~ msgid "Here is a similar door as the one before. I try to open it."
 #~ msgstr "Tu sú podobné dvere ako predtým. Skúsim ich otvoriť."
 
+#~ msgid "Turns run out"
+#~ msgstr "Vyprší čas"
+
 #~ msgid "Clear the mines"
 #~ msgstr "Vyčistíš bane"
 
@@ -10510,9 +10531,6 @@ msgstr "Arthian"
 #~ msgid "‘The master’s study’ eh? I bet we’ll find Malifor there!"
 #~ msgstr ""
 #~ "\"Vládcova študovňa\", hej? Stavím sa, že práve tam nájdeme Malifora!"
-
-#~ msgid "Turns run out"
-#~ msgstr "Vyprší čas"
 
 #~ msgid "Death of Tallin or Stalrag."
 #~ msgstr "Zomrie Tallin alebo Stalrag"
