--- a/po/wesnoth-tutorial/sk.po
+++ b/po/wesnoth-tutorial/sk.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
 "PO-Revision-Date: 2017-04-14 21:41+0200\n"
 "Last-Translator: Stanislav Hoferek <shoferek@gmail.com>\n"
