--- a/po/wesnoth-utbs/sk.po
+++ b/po/wesnoth-utbs/sk.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
 "PO-Revision-Date: 2018-05-10 02:17+0200\n"
 "Last-Translator: PaulP <paulp@hotmail.sk>\n"
