updated Slovak translation

--- a/po/wesnoth-aoi/sk.po
+++ b/po/wesnoth-aoi/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
-"PO-Revision-Date: 2018-04-18 01:12+0200\n"
+"PO-Revision-Date: 2019-01-23 22:44+0100\n"
 "Last-Translator: Stanislav Hoferek <shoferek@gmail.com>\n"
 "Language-Team: none\n"
 "Language: sk\n"
@@ -36,10 +36,8 @@ msgstr ""
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:20
-#, fuzzy
-#| msgid "(Novice level, 7 scenarios.)"
 msgid "(Rookie level, 7 scenarios.)"
-msgstr "(Vhodné pre začiatočníkov, 7 máp)"
+msgstr "(Vhodné pre začiatočníkov, 7 máp.)"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
@@ -285,6 +283,9 @@ msgid ""
 "me that they are safe, but if we should embark on a campaign then we will "
 "surely need them alongside us in the battles ahead."
 msgstr ""
+"Môj pane, žiadny z našich liečiteľov nemá skúsenosti z boja. Teší ma, že sú "
+"v bezpečí, ale ak sa rozhodneme pre výpravu, určite ich budeme potrebovať "
+"mať po boku v budúcich bitkách."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:214
@@ -293,6 +294,9 @@ msgid ""
 "pleases me that they are safe, but if we should embark on a campaign then we "
 "will surely need them alongside us in the battles ahead."
 msgstr ""
+"Môj pane, žiadna z našich liečiteliek nemá skúsenosti z boja. Teší ma, že sú "
+"v bezpečí, ale ak sa rozhodneme pre výpravu, určite ich budeme potrebovať "
+"mať po boku v budúcich bitkách."
 
 #. [message]: race=elf
 #. the player has recruited some Shamans but has lost all them (or managed to level a Sorceress)
@@ -303,6 +307,9 @@ msgid ""
 "on a campaign then we will surely need them alongside us in the battles "
 "ahead."
 msgstr ""
+"Môj pane, žiadny z našich preživších liečiteľov nemá skúsenosti z boja. Bolí "
+"ma navrhnúť, že by sme mali ohroziť ďalšieho, ale ak sa rozhodneme pre "
+"výpravu, určite ich budeme potrebovať mať po boku v budúcich bitkách."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:229
@@ -312,6 +319,9 @@ msgid ""
 "should embark on a campaign then we will surely need them alongside us in "
 "the battles ahead."
 msgstr ""
+"Môj pane, žiadna z našich preživších liečiteliek nemá skúsenosti z boja. "
+"Bolí ma navrhnúť, že by sme mali ohroziť ďalšiu, ale ak sa rozhodneme pre "
+"výpravu, určite ich budeme potrebovať mať po boku v budúcich bitkách."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:244
@@ -669,12 +679,6 @@ msgstr "(<i>Odkašľanie</i>) Počkám si... spolu s mŕtvymi..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:222
-#, fuzzy
-#| msgid ""
-#| "The orcish chieftain finally fell, overcome by his wounds. The elves "
-#| "found themselves in a half-ruined camp littered with the bodies of both "
-#| "sides.There was no hale orc in sight, nor did any of the wounded beg "
-#| "mercy. The elves took no prisoners."
 msgid ""
 "The orcish chieftain finally fell, overcome by his wounds. The elves found "
 "themselves in a half-ruined camp littered with the bodies of both sides. "
@@ -722,15 +726,11 @@ msgstr ""
 
 #. [message]: role=advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:265
-#, fuzzy
-#| msgid ""
-#| "What about the loot lord? We found supplies worth over a hundred gold in "
-#| "the camp."
 msgid ""
 "What about the loot, lord? We found supplies worth over a hundred gold in "
 "the camp."
 msgstr ""
-"Čo urobíme s korisťou? Našli sme zásoby po celom tábore aj so stovkou "
+"Čo urobíme s korisťou pane? Našli sme zásoby po celom tábore aj so stovkou "
 "zlatých mincí."
 
 #. [message]: speaker=Erlornas
@@ -762,10 +762,8 @@ msgstr ""
 
 #. [message]: role=advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:320
-#, fuzzy
-#| msgid "We can’t carry on Lord, the men are too tired. We have to fall back."
 msgid "We can’t carry on, lord, the men are too tired. We have to fall back."
-msgstr "Nemôžeme pokračovať, muži sú unavení. Musíme sa stiahnuť."
+msgstr "Nemôžeme pokračovať pane, muži sú unavení. Musíme sa stiahnuť."
 
 #. [message]: speaker=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:325
