--- a/po/wesnoth-ai/sk.po
+++ b/po/wesnoth-ai/sk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-09 08:38 UTC\n"
-"PO-Revision-Date: 2018-06-10 19:02+0200\n"
+"PO-Revision-Date: 2019-01-23 22:32+0100\n"
 "Last-Translator: Svistwarrior273 <romanbeno273@gmail.com>\n"
 "Language-Team: \n"
 "Language: sk\n"
@@ -656,26 +656,6 @@ msgstr "Buď opatrný a nechoď do cesty tomu drakovi. Je to drsňák."
 
 #. [message]: speaker=Rowck
 #: data/ai/micro_ais/scenarios/dragon.cfg:91
-#, fuzzy
-#| msgid ""
-#| "Hi there. I am Rowck and here is what I do:\n"
-#| "When hungry, I move around part of the map in a random wander until I get "
-#| "into range of an enemy. If enemies are within range, I attack and devour "
-#| "the weakest of them. After that, I retreat to my rest location, where I "
-#| "stay for a certain number of turns or until fully healed.\n"
-#| "A few details (features, not bugs, but can be changed if desired):\n"
-#| "- If my way home is blocked on the return, the normal RCA AI takes over "
-#| "my behavior.\n"
-#| "- I will, however, attack any enemy occupying my rest hex, if I can get "
-#| "there.\n"
-#| "- A kill only makes me go home when I am the attacker, not as defender.\n"
-#| "- Occasionally I will not move at all while wandering (a dragon has to "
-#| "rest sometimes!)\n"
-#| "\n"
-#| "Note: The Hunter AI is coded as a Micro AI. A Micro AI can be added and "
-#| "adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "Hi there. I am Rowck and here is what I do:\n"
 "When hungry, I move around part of the map in a random wander until I get "
@@ -700,7 +680,7 @@ msgstr ""
 "Keď vyhladnem, náhodne blúdim po mape až pokiaľ sa nedostanem do dosahu "
 "nejakého nepriateľa. Ak nejakých mám v dohľade, zaútočím a zožeriem toho "
 "najslabšieho z nich. Potom ustúpim naspäť do môjho hniezda, kde zostanem "
-"určitý počet ťahov, alebo sa plne nevyliečim.\n"
+"určitý počet ťahov, alebo kým sa plne nevyliečim.\n"
 "Zopár detailov (herné prvky, nie bugy, ale to sa môže v prípade potreby "
 "zmeniť):\n"
 "- Ak bude moja cesta domov pri návrate zablokovaná, základná RCA UI prevezme "
@@ -715,7 +695,7 @@ msgstr ""
 "Poznámka: Lovecká UI je naprogramovaná ako Mikro UI. Mikro UI môže byť "
 "pridaná a adaptovaná k cieľu scenára ľahko iba použitím WML a tagu "
 "[micro_ai]. Pozrite si <span color='#00A000'>Mikro UI wiki stránku</span> na "
-"https://wiki.wesnoth.org/Micro_AIs pre viac informácii."
+"https://wiki.wesnoth.org/Micro_AIs pre viac informácií."
 
 #. [objectives]
 #: data/ai/micro_ais/scenarios/dragon.cfg:104
@@ -840,22 +820,6 @@ msgstr "Vypni kontrolu človeka nad stranou 1"
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/goto.cfg:419
-#, fuzzy
-#| msgid ""
-#| "This scenario demonstrates a variety of different uses of the Goto Micro "
-#| "AI. All AI sides are controlled by this MAI in one way or another (except "
-#| "for the saurians, which are run by the Lurkers Micro AI). Messages will "
-#| "be displayed throughout the scenario to point out what the units are "
-#| "doing.\n"
-#| "\n"
-#| "The player controls Side 1. There are right-click context menu options "
-#| "for adding Side 1 units to the map and for taking them off again. This is "
-#| "useful mostly for testing how the Side 3 guardians react.\n"
-#| "\n"
-#| "Note: The Goto AI is coded as a Micro AI. A Micro AI can be added and "
-#| "adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "This scenario demonstrates a variety of different uses of the Goto Micro AI. "
 "All AI sides are controlled by this MAI in one way or another (except for "
@@ -873,7 +837,7 @@ msgid ""
 msgstr ""
 "Tento scenár demonštruje viacero rôznych využití Chodiacej Mikro UI. Všetky "
 "UI strany sú kontrolované touto MUI jedným rovnakým spôsobom (okrem saurov, "
-"ktorí bežia pod Obsmŕdačskym Mikro UI). Počas scenára budú zobrazované rôzne "
+"ktorí bežia pod Obsmŕdačským Mikro UI). Počas scenára budú zobrazované rôzne "
 "správy poukazujúce na to, čo práve jednotky robia.\n"
 "\n"
 "Hráč kontroluje stranu 1. Je tu k dispozícii pravo-tlačítkové kontextové "
@@ -884,7 +848,7 @@ msgstr ""
 "Poznámka: Chodiaca UI je naprogramovaná ako Mikro UI. Mikro UI môže byť "
 "pridaná a adaptovaná k cieľu scenára ľahko iba použitím WML a tagu "
 "[micro_ai]. Pozrite si <span color='#00A000'>Mikro UI wiki stránku</span> na "
-"https://wiki.wesnoth.org/Micro_AIs pre viac informácii."
+"https://wiki.wesnoth.org/Micro_AIs pre viac informácií."
 
 #. [objectives]
 #: data/ai/micro_ais/scenarios/goto.cfg:429
@@ -1509,20 +1473,6 @@ msgstr "Štvanec sa pohne sem"
 
 #. [message]: speaker=Good Bandit
 #: data/ai/micro_ais/scenarios/hang_out.cfg:120
-#, fuzzy
-#| msgid ""
-#| "That outlaw over there is going to run for the keep in the southeast.  "
-#| "He's only going to recruit for three rounds before he'll start moving and "
-#| "he and his footpads are much faster than we are.  Let's make haste or "
-#| "we'll never catch him.\n"
-#| "\n"
-#| "Note: This scenario uses a combination of two Micro AIs, the Hang Out "
-#| "Micro AI which makes the Side 2 units remain around the keep for two "
-#| "turns (while moving off castle tiles to allow for recruiting) and the "
-#| "Messenger Escort AI which takes over after that.  A Micro AI can be added "
-#| "and adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "That outlaw over there is going to run for the keep in the southeast.  He's "
 "only going to recruit for three rounds before he'll start moving and he and "
@@ -1768,17 +1718,6 @@ msgstr "Poznámky"
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/lurkers.cfg:475
-#, fuzzy
-#| msgid ""
-#| "You can use the right-click context menu to add additional lurkers.\n"
-#| "\n"
-#| "Any unit not adjacent to swamp (and water, for the nagas) is safe from "
-#| "the lurkers, thus it is easy to keep Pekzs from being attacked.\n"
-#| "\n"
-#| "The Lua Lurker AI is coded as a Micro AI. A Micro AI can be added and "
-#| "adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "You can use the right-click context menu to add additional lurkers.\n"
 "\n"
@@ -1799,8 +1738,8 @@ msgstr ""
 "\n"
 "Lua Obsmŕdačská UI je naprogramovaná ako Mikro UI. Mikro UI môže byť pridaná "
 "a adaptovaná k cieľu scenára ľahko iba použitím WML a tagu [micro_ai]. "
-"Pozrite si <span color='#00A000'>Mikro UI wiki stránku</span> na http://wiki."
-"wesnoth.org/Micro_AIs pre viac informácii."
+"Pozrite si <span color='#00A000'>Mikro UI wiki stránku</span> na https://"
+"wiki.wesnoth.org/Micro_AIs pre viac informácií."
 
 #. [objectives]
 #: data/ai/micro_ais/scenarios/lurkers.cfg:485
@@ -1889,24 +1828,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/messenger_escort.cfg:152
-#, fuzzy
-#| msgid ""
-#| "The Messenger Escort AI will try to move the dragoon messenger to the "
-#| "signpost in the north, while protecting him as well as possible with the "
-#| "other units. Vanak's orcs need to stop him.\n"
-#| "\n"
-#| "Note that the messenger route is set up through a series of waypoints "
-#| "here simply to demonstrate how to use waypoints. On this map, using only "
-#| "a single waypoint at the end of the route would work just as well (or "
-#| "probably even better).\n"
-#| "\n"
-#| "Also note that the messenger does not have to get exactly to each "
-#| "signpost (except for the last one), getting close is good enough.\n"
-#| "\n"
-#| "The Messenger Escort AI is coded as a Micro AI. A Micro AI can be added "
-#| "and adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "The Messenger Escort AI will try to move the dragoon messenger to the "
 "signpost in the north, while protecting him as well as possible with the "
@@ -1940,7 +1861,7 @@ msgstr ""
 "Poslo-eskortovacie UI je naprogramované ako Mikro UI. Mikro UI môže byť "
 "pridaná a adaptovaná k cieľu scenára ľahko iba použitím WML a tagu "
 "[micro_ai]. Pozri si <span color='#00A000'>Mikro UI wiki stránku</span> na "
-"https://wiki.wesnoth.org/Micro_AIs pre viac informácii."
+"https://wiki.wesnoth.org/Micro_AIs pre viac informácií."
 
 #. [objective]: condition=win
 #: data/ai/micro_ais/scenarios/messenger_escort.cfg:165
@@ -2920,27 +2841,6 @@ msgstr "Umiestni netopiera strany 2"
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/swarm.cfg:144
-#, fuzzy
-#| msgid ""
-#| "This scenario features bats moving around in a swarm. Without adjacent "
-#| "enemies, they simply try to stay together and at a certain distance from "
-#| "enemies. However, if an enemy unit is close to any bat, the swarm "
-#| "scatters. This is particular fun to watch when one places an enemy unit "
-#| "in the middle of the swarm. After being scattered, the swarm members "
-#| "slowly rejoin, but not in a very organized way. Sub-swarms or individual "
-#| "bats might roam around for quite some time before they find their way "
-#| "back. It is also possible that individual bats (or small groups) split "
-#| "off from the larger swarm at times.\n"
-#| "\n"
-#| "The player controls a side of gryphons, each of which is given 99 moves "
-#| "so that the reaction of the swarm to enemies can be tested easily. There "
-#| "are also several right-click options, for example for adding bats or "
-#| "gryphons or for taking units off the map.\n"
-#| "\n"
-#| "Note: The Swarm AI is coded as a Micro AI. A Micro AI can be added and "
-#| "adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "This scenario features bats moving around in a swarm. Without adjacent "
 "enemies, they simply try to stay together and at a certain distance from "
@@ -2979,8 +2879,8 @@ msgstr ""
 "\n"
 "Poznámka: Húfna UI je naprogramovaná ako Mikro UI. Mikro UI môže byť pridaná "
 "a adaptovaná k cieľu scenára ľahko iba použitím WML a tagu [micro_ai]. "
-"Pozrite si <span color='#00A000'>Mikro UI wiki stránku</span> na http://wiki."
-"wesnoth.org/Micro_AIs pre viac informácii."
+"Pozrite si <span color='#00A000'>Mikro UI wiki stránku</span> na https://"
+"wiki.wesnoth.org/Micro_AIs pre viac informácií."
 
 #. [objectives]
 #: data/ai/micro_ais/scenarios/swarm.cfg:154
