--- a/po/wesnoth-sof/sk.po
+++ b/po/wesnoth-sof/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:30 UTC\n"
-"PO-Revision-Date: 2018-04-18 00:33+0200\n"
+"PO-Revision-Date: 2019-01-23 23:07+0100\n"
 "Last-Translator: Stanislav Hoferek <shoferek@gmail.com>\n"
 "Language-Team: none\n"
 "Language: sk_SK\n"
@@ -36,7 +36,7 @@ msgstr "Normálna"
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:21
 msgid "Challenging"
-msgstr "Výzva"
+msgstr "Náročná"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:21
@@ -46,7 +46,7 @@ msgstr "Bojovník"
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:22
 msgid "Difficult"
-msgstr "Náročná"
+msgstr "Ťažká"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:22
@@ -78,10 +78,8 @@ msgstr ""
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:34
-#, fuzzy
-#| msgid "(Expert level, 9 scenarios.)"
 msgid "(Hard level, 9 scenarios.)"
-msgstr "(Pre expertov, 9 máp)"
+msgstr "(Ťažká úroveň, 9 scén.)"
 
 #. [about]
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:39
@@ -2136,7 +2134,7 @@ msgstr ""
 #. [label]
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:138
 msgid "Shorbear caves"
-msgstr ""
+msgstr "Jaskyne Shorbear"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:146
@@ -2145,9 +2143,6 @@ msgstr "Poraz Glonoina, veliteľa klanu"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:155
-#, fuzzy
-#| msgid ""
-#| "Have all heroes in the Shorbear caves while no enemies are in the caves"
 msgid "Have all heroes, and no enemies, in the Shorbear caves"
 msgstr ""
 "Dostaň všetkých hrdinov do jaskýň klanu Shorbear, keď tam nebude žiadny "
@@ -2675,7 +2670,7 @@ msgid ""
 "Nice try, Durstorn, but you missed. Now, I’d say that attacking an ally "
 "constitutes treason, wouldn’t you?"
 msgstr ""
-"Tak to si zoslonil, Durstorn. To je ako skonil, ale asi milión krát viac. "
+"Tak to si zoslonil, Durstorn. To je ako skonil, ale asi miliónkrát viac. "
 "Pokiaľ viem, tak útoku na spojenca je schopný iba podlý zradca!"
 
 #. [message]: speaker=Durstorn
@@ -2958,7 +2953,7 @@ msgstr "Raesil"
 #. [message]: speaker=second_unit
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:217
 msgid "Great, now there is no need to worry about those elves anymore!"
-msgstr ""
+msgstr "Super, už sa nemusíme trápiť s tými Elfmi!"
 
 #. [message]: role=newcomer
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:226
@@ -2966,28 +2961,31 @@ msgid ""
 "Did you really think that you could escape us? Don’t underestimate us, "
 "inferior humans!"
 msgstr ""
+"Naozaj ste si mysleli, že nám môžete utiecť? Nepodceňujte nás, podradní "
+"ľudia!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:238
 msgid ""
 "Even though my chances have grown worse, I have to fulfil my duty. I do not "
 "owe them any less!"
-msgstr ""
+msgstr "Aj keď sa naše šance zhoršili, musím splniť svoju úlohu. To im dlžím!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:263
 msgid "Oh no, more of them? And there I thought I could catch my breath…"
 msgstr ""
+"Ale nie, je ich ešte viac? A to som si myslel, že konečne chytím dych..."
 
 #. [message]: role=fighter
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:268
 msgid "Don’t worry sir, we’ll make it through this!"
-msgstr ""
+msgstr "Nebojte sa pane, prebojujeme sa cez toho!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:293
 msgid "Is there no end to their numbers?"
-msgstr ""
+msgstr "Nie je im konca?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:358
@@ -3014,6 +3012,7 @@ msgstr ""
 msgid ""
 "You slow humans took too long, our detachment has already caught up with you!"
 msgstr ""
+"Vám pomalým ľuďom to trvalo pridlho a náš oddelená skupina vás dobehla!"
 
 #. [unit]: type=Lieutenant, id=Hadlin   # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:543
@@ -3040,19 +3039,14 @@ msgstr ""
 #. [message]: speaker=Alanin
 #. cavalier = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:572
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a "
 "mission in the northlands, and now elvish horsemen are chasing me. I barely "
 "evaded them."
 msgstr ""
-"Som dragún, a patrím do elitnej jednotky kráľa Haldrika II. Bol som poslaný "
-"kvôli dôležitej misií do severných zemí, no teraz ma naháňajú elfský jazdci. "
-"Len s ťažkosťami im unikám."
+"Som elitný jazdec z osobnej stráže kráľa Haldrika II. Bol som poslaný kvôli "
+"dôležitej misii do severných zemí, no teraz ma naháňajú elfskí jazdci. Len s "
+"ťažkosťami im unikám."
 
 #. [message]: speaker=Hadlin  # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:578
@@ -3259,16 +3253,12 @@ msgstr "Ten kameň je môj! Daj tie ruky preč!"
 
 #. [message]: speaker=Thursagan
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:422
-#, fuzzy
-#| msgid ""
-#| "This forge will work perfectly. Give me a few days here, and I can "
-#| "reforge the Sceptre of Fire to fulfill its purpose."
 msgid ""
 "This forge will work perfectly. Give me a day or two here, and I can reforge "
 "the Sceptre of Fire to fulfill its purpose."
 msgstr ""
-"Táto dielňa vyzerá vynikajúco. Dajte mi pár dní a vytvorím také žezlo, ktoré "
-"dokonale splní svoj účel."
+"Táto dielňa vyzerá vynikajúco. Dajte mi pár dní a opravím Ohnivé žezlo aby "
+"znovu plnilo svoj účel."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:450
@@ -3318,11 +3308,6 @@ msgstr "Orkovia"
 #. [part]
 #. The text in 1.14.4 mentioned Knalga. Geographically, these caves are in Knalga, but the text was confusing if the reader thought of the Knalgan Alliance.
 #: data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg:161
-#, fuzzy
-#| msgid ""
-#| "There was no exit from the caverns of Knalga. They had reached the realms "
-#| "of the orcs, with the elves hot on their trail. And there was no exit "
-#| "from those caves."
 msgid ""
 "There was no exit for the dwarves. They had reached the realms of the orcs, "
 "with the elves hot on their trail. There was truly no exit from these caves."
